--- a/UpGrade/src/main/webapp/HTML/AdminPortal/DeptHeadPortal.html
+++ b/UpGrade/src/main/webapp/HTML/AdminPortal/DeptHeadPortal.html
@@ -24,20 +24,19 @@
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-			<div class="col">
-				<h4 class="text-white mt-2">Department Head Portal</h4>
-			</div>
+			<h4 class="text-white mt-2">Dept Head Portal</h4>
 			<ul class="navbar-nav mr-auto ml-5">
-			<li class="nav-item active"><a class="nav-link"
-				href="/UpGrade/depthead.change">Dept Head Portal<span
-					class="sr-only">(current)</span></a></li>
-			<li class="nav-item ml-5"><a class="nav-link"
-					href="/UpGrade/enterEmployee.change">Enter Employee</a></li>
+				<li class="nav-item active ml-3"><a class="nav-link"
+					href="/UpGrade/depthead.change">Department Head Home
+					<span class="sr-only">(current)</span>
+					</a></li>
+				<li class="nav-item"><a class="nav-link"
+					href="/UpGrade/enterEmployee.change">Enter Employee 
+				</a></li>
 			</ul>
-			<div class="col d-flex justify-content-end">
+			<div class="d-flex justify-content-center">
 				<a href="/UpGrade/logout.change"><button type="button"
-						class="btn btn-primary d-flex justify-content-center">Log
-						Out</button></a>
+						class="btn btn-primary">Log Out</button></a>
 			</div>
 		</div>
 	</nav>
