--- a/UpGrade/src/main/webapp/HTML/AdminPortal/EnterEmployee.html
+++ b/UpGrade/src/main/webapp/HTML/AdminPortal/EnterEmployee.html
@@ -26,16 +26,12 @@
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<h4 class="text-white mt-2">Dept Head Portal</h4>
 			<ul class="navbar-nav mr-auto ml-5">
+				<li class="nav-item ml-3"><a class="nav-link"
+					href="/UpGrade/depthead.change">Department Head Home</a></li>
 				<li class="nav-item active"><a class="nav-link"
 					href="/UpGrade/enterEmployee.change">Enter Employee <span
 						class="sr-only">(current)</span>
 				</a></li>
-				<li class="nav-item ml-3"><a class="nav-link"
-					href="/UpGrade/presentations.change">Grades and Presentations</a></li>
-				<li class="nav-item ml-3"><a class="nav-link"
-					href="/UpGrade/details.change">Approve Reimbursements</a></li>
-				<li class="nav-item ml-3"><a class="nav-link"
-					href="/UpGrade/reports.change">Reimbursement Reports</a></li>
 			</ul>
 			<div class="d-flex justify-content-center">
 				<a href="/UpGrade/logout.change"><button type="button"
@@ -48,54 +44,55 @@
 	</div>
 	<div class="container">
 		<form method="POST" action="/UpGrade/insertEmployee.change">
-		<div class="card-group">
-			<div class="card">
-				<div class="card-body">
-					<div class="row mt-3 d-flex justify-content-center">
-						<div class="col">
-							<input placeholder="First Name" name="firstName"
-								class="form-control">
+			<div class="card-group">
+				<div class="card">
+					<div class="card-body">
+						<div class="row mt-3 d-flex justify-content-center">
+							<div class="col">
+								<input placeholder="First Name" name="firstName"
+									class="form-control">
+							</div>
+							<div class="col">
+								<input placeholder="Last Name" name="lastName"
+									class="form-control">
+							</div>
 						</div>
-						<div class="col">
-							<input placeholder="Last Name" name="lastName"
-								class="form-control">
+						<div class="row mt-3 d-flex justify-content-center">
+							<div class="col">
+								<input placeholder="Username" name="userName"
+									class="form-control">
+							</div>
+							<div class="col">
+								<input placeholder="Password" name="password"
+									class="form-control">
+							</div>
+						</div>
+						<div class="row mt-3 d-flex justify-content-center">
+							<div class="col">
+								<select class="custom-select" name="supervisor" required>
+									<option selected disabled value="0">Employee
+										Supervisor</option>
+									<option value="6">Ray</option>
+									<option value="3">Tina</option>
+								</select>
+							</div>
+							<div class="col">
+								<select class="custom-select" name="depthead" required>
+									<option selected disabled value="0">Department</option>
+									<option value="7">Accounting</option>
+									<option value="5">HR</option>
+									<option value="2">IT</option>
+								</select>
+							</div>
 						</div>
 					</div>
-					<div class="row mt-3 d-flex justify-content-center">
-						<div class="col">
-							<input placeholder="Username" name="userName"
-								class="form-control">
+					<div class="row d-flex justify-content-center mt-5">
+						<div class="col-md-2">
+							<button type="submit" class="btn btn-primary m-1">Submit</button>
 						</div>
-						<div class="col">
-							<input placeholder="Password" name="password"
-								class="form-control">
-						</div>
-					</div>
-					<div class="row mt-3 d-flex justify-content-center">
-						<div class="col">
-							<select class="custom-select" name="supervisor" required>
-								<option selected disabled value="0">Employee Supervisor</option>
-								<option value="6">Ray</option>
-								<option value="3">Tina</option>
-							</select>
-						</div>
-						<div class="col">
-							<select class="custom-select" name="depthead" required>
-								<option selected disabled value="0">Department</option>
-								<option value="7">Accounting</option>
-								<option value="5">HR</option>
-								<option value="2">IT</option>
-							</select>
-						</div>
-					</div>
-				</div>
-				<div class="row d-flex justify-content-center mt-5">
-					<div class="col-md-2">
-						<button type="submit" class="btn btn-primary m-1">Submit</button>
 					</div>
 				</div>
 			</div>
-		</div>
 		</form>
 	</div>
 
