--- a/UpGrade/src/main/webapp/HTML/EmpPortal/EmpPortal.html
+++ b/UpGrade/src/main/webapp/HTML/EmpPortal/EmpPortal.html
@@ -33,9 +33,7 @@
 				<li class="nav-item"><a class="nav-link"
 					href="/UpGrade/empForm.change">Submission Form </a></li>
 				<li class="nav-item"><a class="nav-link"
-					href="/UpGrade/allpending.change">Pending Reimbursements</a></li>
-				<li class="nav-item"><a class="nav-link"
-					href="/UpGrade/viewsingle.change">View Reimbursement Details</a></li>
+					href="/UpGrade/pending.change">Pending Reimbursements</a></li>
 				<li class="nav-item"><a class="nav-link"
 					href="/UpGrade/grades.change">Grade Submission and Pending
 						Approval </a></li>
