--- a/UpGrade/src/main/webapp/HTML/EmpPortal/GradesPending.html
+++ b/UpGrade/src/main/webapp/HTML/EmpPortal/GradesPending.html
@@ -26,19 +26,18 @@
 			<ul class="navbar-nav mr-auto">
 				<li class="nav-item"><a class="nav-link"
 					href="/UpGrade/emphome.change">Home </a></li>
-				<li class="nav-item active"><a class="nav-link"
-					href="/UpGrade/rules.change">Reimbursement Rules<span
-						class="sr-only">(current)</span>
+				<li class="nav-item"><a class="nav-link"
+					href="/UpGrade/rules.change">Reimbursement Rules
 				</a></li>
 				<li class="nav-item"><a class="nav-link"
 					href="/UpGrade/empForm.change">Submission Form </a></li>
 				<li class="nav-item"><a class="nav-link"
 					href="/UpGrade/pending.change">Pending Reimbursements</a></li>
-				<li class="nav-item"><a class="nav-link"
-					href="/UpGrade/viewsingle.change">View Reimbursement Details</a></li>
-				<li class="nav-item"><a class="nav-link"
+				<li class="nav-item active"><a class="nav-link"
 					href="/UpGrade/grades.change">Grade Submission and Pending
-						Approval </a></li>
+						Approval 
+						<span class="sr-only">(current)</span>
+						</a></li>
 				<li class="nav-item"><a class="nav-link"
 					href="/UpGrade/awarded.change">Awarded Reimbursements </a></li>
 			</ul>
